# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import workersRouter from "./workers";
 import reviewsRouter from "./reviews";
 import categoriesRouter from "./categories";
 import statsRouter from "./stats";
+import jobRequestsRouter from "./jobRequests";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(workersRouter);
 router.use(reviewsRouter);
 router.use(categoriesRouter);
 router.use(statsRouter);
+router.use(jobRequestsRouter);
 
 export default router;
