# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./workers";
 export * from "./reviews";
 export * from "./categories";
+export * from "./jobRequests";
